# svg-generators

./: Makefile.am  README.md  blob-generator-blue.conf  blob-generator-dark-grey.conf  blob-generator-grey.conf  blob-generator.c  bootstrap  configure.ac  flag-generator.c  star-generator.c  star-test.sh  stripe-front.conf  stripe-generator.c  stripe-rear-fender.conf  stripe-side.conf  version.sh
lib/: Makefile.am  color.c  color.h  config-file.c  config-file.h  geometry.c  geometry.h  log.c  log.h  mem.c  mem.h  svg-utils.h  svg.c  svg.h  util.c  util.h
